force-app/main/default/objects/Expansion_Site__c/Expansion_Site__c.object-meta.xml
<CustomObject>
    <description>Potential locations being evaluated for new retail store expansion. Core object for the Store Expansion Strategy Agent.</description>
    <label>Expansion Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expansion Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>