force-app/main/default/objects/Expansion_Site__c/fields/Accessibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Score__c</fullName>
    <label>Accessibility Score (0-100)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>