force-app/main/default/objects/Expansion_Site__c/fields/Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Area_Type__c</fullName>
    <label>Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>