force-app/main/default/objects/Expansion_Site__c/fields/Avg_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Avg_Household_Income__c</fullName>
    <label>Average Household Income</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>