force-app/main/default/objects/Expansion_Site__c/fields/Demographic_Area__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demographic Area</label>
    <referenceTo>Demographic_Data__c</referenceTo>
    <relationshipLabel>Expansion Sites</relationshipLabel>
    <relationshipName>Expansion_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>