force-app/main/default/objects/Expansion_Site__c/fields/Distance_Nearest_Store_km__c.field-meta.xml
<CustomField>
    <fullName>Distance_Nearest_Store_km__c</fullName>
    <label>Distance to Nearest Store (km)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>