force-app/main/default/objects/Expansion_Site__c/fields/Est_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_Revenue__c</fullName>
    <formula>Est_Monthly_Revenue__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>