force-app/main/default/objects/Expansion_Site__c/fields/Est_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Est_Monthly_Revenue__c</fullName>
    <label>Estimated Monthly Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>