force-app/main/default/objects/Expansion_Site__c/fields/Foot_Traffic_Index__c.field-meta.xml
<CustomField>
    <fullName>Foot_Traffic_Index__c</fullName>
    <label>Foot Traffic Index (Daily)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>