force-app/main/default/objects/Expansion_Site__c/fields/Nearest_Store__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nearest Existing Store</label>
    <referenceTo>RetailStore</referenceTo>
    <relationshipLabel>Nearest Expansion Sites</relationshipLabel>
    <relationshipName>Nearest_Expansion_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>