force-app/main/default/objects/Expansion_Site__c/fields/Payback_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Payback_Period_Months__c</fullName>
    <label>Payback Period (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>