force-app/main/default/objects/Expansion_Site__c/fields/Recommended__c.field-meta.xml
<CustomField>
    <fullName>Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommended by Agent</label>
    <type>Checkbox</type>
</CustomField>