force-app/main/default/objects/Expansion_Site__c/fields/Setup_Cost__c.field-meta.xml
<CustomField>
    <fullName>Setup_Cost__c</fullName>
    <label>Estimated Setup Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>